--- a/src/payrollfinalproject/FrmMainPayroll.form
+++ b/src/payrollfinalproject/FrmMainPayroll.form
@@ -116,8 +116,8 @@
                   <Properties>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                       <Table columnCount="2" rowCount="0">
-                        <Column editable="true" title="Department ID" type="java.lang.Integer"/>
-                        <Column editable="true" title="Department Name" type="java.lang.String"/>
+                        <Column editable="false" title="Department ID" type="java.lang.Integer"/>
+                        <Column editable="false" title="Department Name" type="java.lang.String"/>
                       </Table>
                     </Property>
                     <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
